logo fix on mobile

--- a/custom.css
+++ b/custom.css
@@ -61,7 +61,7 @@
   text-align: center;
 }
 .navbar-toggler{
-  margin-top: 10px;
+  margin-top: -20px;
   width: 57px;
   height: 44px;
   background-color: #361b4e;} 
